--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -181,6 +181,31 @@
     "plt.plot(year_amounts.keys(), [sum(x)/len(x) for x in year_amounts.values()])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "LHV1719\n   19 METER EXPIRED\n   12 PARKING PROHIBITED\n   10 EXPIRED INSPECTION\n    8 OVER TIME LIMIT\n    5 STOPPING PROHIBITED\n    4 STORAGE FEE AUCTION\n    3 LOADING ZONE\n    3 SIDEWALK\n    2 FIRE HYDRANT\n    2 CORNER CLEARANCE\n    2 BUS ONLY ZONE\n    2 HP RAMP BLOCKED\n    2 METER EXPIRED CC\n    2 DOUBLE PARKED\n    1 SPEED CAMERA VIOLATION\n    1 PHOTO RED LIGHT\n    1 HP RESERVED SPACE\n    1 TOW FEE AUCTION\n    1 STOP PROHIBITED CC\n    1 UNREG/ABANDONED VEH\n    1 PARKING PROHBITED CC\n    1 PARKING PROHBITED\n    1 PASSENGR LOADNG ZONE\n"
+     ]
+    }
+   ],
+   "source": [
+    "violations = {}\n",
+    "for obj in objs:\n",
+    "    violation = obj['details']['Violation']\n",
+    "    if violation not in violations:\n",
+    "        violations[violation] = 1\n",
+    "    else:\n",
+    "        violations[violation] += 1\n",
+    "for name, count in sorted(violations.items(), key=lambda x: x[1])[::-1]:\n",
+    "    print(f'{count: 5} {name}')"
+   ]
   }
  ]
 }
